feat: add endpoint to activate the user account
